更新Nginx基系统

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,15 +1,15 @@
 user www www;
 worker_processes auto;
- 
-error_log /var/log/wwwlogs/error_nginx.log crit;
+
+error_log /data/wwwlogs/error_nginx.log crit;
 pid /var/run/nginx.pid;
 worker_rlimit_nofile 51200;
- 
+
 events {
     use epoll;
     worker_connections 51200;
 }
- 
+
 http {
     include mime.types;
     default_type application/octet-stream;
@@ -22,7 +22,7 @@ http {
     keepalive_timeout 120;
     server_tokens off;
     tcp_nodelay on;
- 
+
     fastcgi_connect_timeout 300;
     fastcgi_send_timeout 300;
     fastcgi_read_timeout 300;
@@ -30,7 +30,7 @@ http {
     fastcgi_buffers 4 64k;
     fastcgi_busy_buffers_size 128k;
     fastcgi_temp_file_write_size 128k;
- 
+
     #Gzip Compression
     gzip on;
     gzip_buffers 16 8k;
@@ -47,41 +47,45 @@ http {
     font/opentype application/x-font-ttf application/vnd.ms-fontobject
     image/x-icon;
     gzip_disable  "msie6";
- 
+
     #If you have a lot of static files to serve through Nginx then caching of the files' metadata (not the actual files' contents) can save some latency.
     open_file_cache max=1000 inactive=20s;
     open_file_cache_valid 30s;
     open_file_cache_min_uses 2;
     open_file_cache_errors on;
- 
+
+    log_format upstream2 '$proxy_add_x_forwarded_for $remote_user [$time_local] "$request" $http_host'
+        '$body_bytes_sent "$http_referer" "$http_user_agent" $ssl_protocol $ssl_cipher'
+        '$request_time [$status] [$upstream_status] [$upstream_response_time] "$upstream_addr"';
+
     server {
         listen 80;
         server_name -;
         root /data/wwwroot;
         index index.html index.php index.jsp;
-        access_log /var/log/wwwlogs/access_nginx.log combined;
- 
+        access_log /data/wwwlogs/access_nginx.log combined;
+
         location /status {
             stub_status on;
             auth_basic "WebServer Status";
         }
- 
-#        location ~ .*\.(php|php5)?$ {
-#            #fastcgi_pass remote_php_ip:9000;
-#            fastcgi_pass unix:/dev/shm/php-cgi.sock;
-#            fastcgi_index index.php;
-#            include fastcgi.conf;
-#        }
- 
+
+        location ~ .*\.(php|php5)?$ {
+            fastcgi_pass PHP_FPM_SERVER:PORT;
+            #fastcgi_pass unix:/dev/shm/php-cgi.sock;
+            fastcgi_index index.php;
+            include fastcgi.conf;
+        }
+
         location ~ .*\.(gif|jpg|jpeg|png|bmp|swf|flv|ico)$ {
             expires 30d;
         }
- 
+
         location ~ .*\.(js|css)?$ {
             expires 7d;
         }
     }
- 
+
 ##########################vhost#####################################
     include vhost/*.conf;
 }
