--- a/etc/nginx-conf-example/block_injections.conf
+++ b/etc/nginx-conf-example/block_injections.conf
@@ -22,3 +22,11 @@ location ~* wp-config.php { access_log /data/wwwlogs/blocked.log blocked; deny a
 location ~* wp-admin/includes { access_log /data/wwwlogs/blocked.log blocked; deny all; }
 location ~* wp-app\.log { access_log /data/wwwlogs/blocked.log blocked; deny all; }
 location ~* (licence|readme|license)\.(html|txt) { access_log /data/wwwlogs/blocked.log blocked; deny all; }
+
+## Block spam
+set $block_spam 0;
+if ($query_string ~ "\b(ultram|unicauca|valium|viagra|vicodin|xanax|ypxaieo)\b") { set $block_spam 1; }
+if ($query_string ~ "\b(erections|hoodia|huronriveracres|impotence|levitra|libido)\b") { set $block_spam 1; }
+if ($query_string ~ "\b(ambien|blue\spill|cialis|cocaine|ejaculation|erectile)\b") { set $block_spam 1; }
+if ($query_string ~ "\b(lipitor|phentermin|pro[sz]ac|sandyauer|tramadol|troyhamby)\b") { set $block_spam 1; }
+if ($block_spam = 1) { return 403; }
