--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,11 +3,11 @@ version: '2'
 services:
   nginx:
     build:
-      context: http://git.dwhd.org/lookback/docker-nginx.git
+      context: https://github.com/xiaoyawl/docker-nginx.git
     restart: always
     image: nginx:1.10.1
     ports:
     - "80:80"
     volumes:
-    - /data/nginx:/data/wwwroot
+    - /data/wwwroot:/data/wwwroot
     - /etc/localtime:/etc/localtime
