--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
       context: https://github.com/xiaoyawl/docker-nginx.git
     restart: always
     image: nginx:1.10.1
+    container_name: nginx
     ports:
     - "80:80"
     volumes:
