--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -13,10 +13,12 @@ childlogdir=/var/log/supervisor/                ; where child log files will liv
 [rpcinterface:supervisor]
 supervisor.rpcinterface_factory = supervisor.rpcinterface:make_main_rpcinterface
 
-[inet_http_server]
-port = 0.0.0.0:9001
-username = docker
-password = lookback
+;[inet_http_server]
+;port = 0.0.0.0:9001
+;username = docker
+;password = lookback
+[unix_http_server]
+file=/tmp/supervisor.sock   ; (the path to the socket file)
 
 [supervisorctl]
 #serverurl=unix:///tmp/supervisor.sock ; use a unix:// URL  for a unix socket
