--- a/docker-compose-nginx-php-mariadb-redis.yml
+++ b/docker-compose-nginx-php-mariadb-redis.yml
@@ -36,7 +36,7 @@ services:
     container_name: nginx_server
     restart: always
     #privileged: true
-    image: benyoo/nginx:1.10.1
+    image: benyoo/nginx:latest
     ports:
     - "80:80"
     - "443:443"
@@ -48,7 +48,7 @@ services:
     - php
     environment:
     - TERM=linux
-    - PHP_FPM=Yes
+    - PHP_FPM=Enable
     - PHP_FPM_SERVER=php_server
     - PHP_FPM_PORT=9000
     - REWRITE=wordpress
