--- a/usr/local/nginx/conf/stream/softether.conf
+++ b/usr/local/nginx/conf/stream/softether.conf
@@ -48,6 +48,13 @@ server {
 }
 
 server {
+    listen 1701 udp;
+    proxy_responses 1;
+    proxy_timeout 20s;
+    proxy_pass 1.2.3.4:1701;
+}
+
+server {
     listen 53 udp;
     proxy_responses 1;
     proxy_timeout 20s;
